# tree-sitter-mailng

./: .editorconfig  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: tslang.yml
bindings/c/: tree-sitter-mailng.pc.in
bindings/c/tree_sitter/: tree-sitter-mailng.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mailng/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMailngTests/: TreeSitterMailngTests.swift
queries/mail/: highlights.scm  injections.scm
src/: scanner.c
test/corpus/: base.txt  correspondents.txt  errors.txt  signature.txt
