[package]
name = "tree-sitter-mailng"
description = "An RFC5322 (email) message file parser"
version = "0.1.0"
authors = ["martin f. krafft <tree-sitter-mail-ng@pobox.madduck.net>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "mailng"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/madduck/tree-sitter-mailng"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.3"
